--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="Nav_Loyalty">Loyalty/Rewards</string>
     <string name="title_activity_coupons_page">CouponsPage</string>
     <string name="menu_gallery">Gallery</string>
+    <string name="BirthExample">03/29/1993</string>
 </resources>
