--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,55 +19,12 @@
     <string name="ClickHere">Click Here</string>
     <string name="SubHeaderSign">Please fill out this form below to create an account!</string>
 
-    <string-array name="spinner_month">
-        <item>Month</item>
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-        <item>07</item>
-        <item>08</item>
-        <item>09</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
-    </string-array>
-    <string-array name="spinner_Day">
-        <item>Day</item>
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-        <item>07</item>
-        <item>08</item>
-        <item>09</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
-        <item>13</item>
-        <item>14</item>
-        <item>15</item>
-        <item>16</item>
-        <item>17</item>
-        <item>18</item>
-        <item>19</item>
-        <item>20</item>
-        <item>21</item>
-        <item>22</item>
-        <item>23</item>
-        <item>24</item>
-        <item>25</item>
-        <item>26</item>
-        <item>27</item>
-        <item>28</item>
-        <item>29</item>
-        <item>30</item>
-        <item>31</item>
-    </string-array>
+    //Key value pairs for shared preferences
+    <string name="CheckboxSave">com.example.paloslanesapp.CheckboxSave</string>
+    <string name="UsernameSave">com.example.paloslanesapp.UserSave</string>
+    <string name="PasswordSave">com.example.paloslanesapp.PasswordSave</string>
+
+
     <string name="Birth">Birthdate:</string>
     <string name="Email">Email:</string>
     <string name="EmailExample">Bowling123@yahoo.com</string>
